src/test/error/var.lns
pub let var = 1;
{
   pub let var2 = 1;
}
pub let var3 = 1;

provide var;
